--- a/src/stories/Download.mdx
+++ b/src/stories/Download.mdx
@@ -5,11 +5,21 @@ import { Meta } from "@storybook/blocks";
 
 # Download & Setup
 
-You can get started with My Materia by cloning the official repository or downloading the source files manually.
+You can get started by cloning the full repository or by using the pre-built minified CSS directly from GitHub Pages.
 
----
+### Use the Minified CSS (quickest)
 
-## 1. Clone the repository
+You can include the pre-built, minified CSS directly from GitHub Pages:
+
+```html
+<link rel="stylesheet" href="https://hrncikla.github.io/CSS-Materia/css/materia.min.css" />
+```
+
+This will include the latest version of My Materia without the need to clone the entire repository.
+
+You can get started by cloning the full repository or downloading the source files manually.
+
+### Clone the repository
 
 [GitHub Repository](https://github.com/hrncikla/CSS-Materia)
 
@@ -33,7 +43,7 @@ CSS-Materia/
 ├── LICENSE          # License file
 ├── package-lock.json # Dependency lock file
 ├── package.json     # Project dependencies and scripts
-└── README.md        # Project overview and setup instructions 
+└── README.md        # Project overview and setup instructions
 ```
 
 ### Install Dependencies
