--- a/src/stories/Download.mdx
+++ b/src/stories/Download.mdx
@@ -15,6 +15,20 @@ You can include the pre-built, minified CSS directly from GitHub Pages:
 <link rel="stylesheet" href="https://hrncikla.github.io/CSS-Materia/css/materia.min.css" />
 ```
 
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title</title>
+    <link rel="stylesheet" href="https://hrncikla.github.io/CSS-Materia/css/materia.min.css" />
+  </head>
+  <body>
+  </body>
+</html>
+```
+
 This will include the latest version of My Materia without the need to clone the entire repository.
 
 You can get started by cloning the full repository or downloading the source files manually.
