--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -35,7 +35,7 @@ export const RightArrow = () => (
       Quick guide to install, configure, and start using Materia in your
       project.
     </p>
-    <a href="/?path=/docs/get-started--docs">
+    <a href="./?path=/docs/get-started--docs">
       Explore Section
       <RightArrow />
     </a>
@@ -44,7 +44,7 @@ export const RightArrow = () => (
     <img src={Foundations} alt="Foundations" />
     <h3>Foundations</h3>
     <p>Essential elements like colors, typography, spacing, and shapes.</p>
-    <a href="/?path=/docs/foundations-typography--docs">
+    <a href="./?path=/docs/foundations-typography--docs">
       Explore Section
       <RightArrow />
     </a>
@@ -56,7 +56,7 @@ export const RightArrow = () => (
       Flexible grid and layout utilities, built on Material Design 3
       breakpoints.
     </p>
-    <a href="/?path=/docs/layout-layout-spacing--docs">
+    <a href="./?path=/docs/layout-layout-spacing--docs">
       Explore Section
       <RightArrow />
     </a>
@@ -68,7 +68,7 @@ export const RightArrow = () => (
       Prebuilt UI elements like buttons, cards, forms, and navigation
       components.
     </p>
-    <a href="/?path=/docs/components-badge--docs">
+    <a href="./?path=/docs/components-badge--docs">
       Explore Section
       <RightArrow />
     </a>
@@ -77,7 +77,7 @@ export const RightArrow = () => (
     <img src={Tokens} alt="Design Tokens" />
     <h3>Design Tokens</h3>
     <p>SCSS and CSS tokens system for easily customizing your design system.</p>
-    <a href="/?path=/docs/design-tokens-user-tokens--docs">
+    <a href="./?path=/docs/design-tokens-user-tokens--docs">
       Explore Section
       <RightArrow />
     </a>
@@ -88,7 +88,7 @@ export const RightArrow = () => (
     <p>
       Customize your theme effortlessly using tokens, mixins, and CSS variables.
     </p>
-    <a href="/?path=/docs/foundations-colors--docs">
+    <a href="./?path=/docs/foundations-colors--docs">
       Explore Section
       <RightArrow />
     </a>
